# boost_numpy_eigen

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  test_eigen_numpy.py
examples/: CMakeLists.txt
src/: eigen_numpy.cc  eigen_numpy.h  eigen_numpy_tensor.cc  numpy_conversions_shared.h  python.cc  test_eigen_numpy_mod.cc
